[RPP] Fix Entries link positioning
Make the entries wrappers HTML Elements and position them with `positionEntryBorderOutlineType` method like the rest of the entries wrappers
Also hide the arrow head when the 'to' entry is not visible.

Video: http://screencast/cast/NjIzMjc2ODUyMTQzNzE4NHwzNDhkYzg0Ni0xOQ

Bug: 368245209
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5890619
Commit-Queue: Alina Varkki <alinavarkki@chromium.org>

--- a/front_end/panels/timeline/overlays/components/entriesLinkOverlay.css
+++ b/front_end/panels/timeline/overlays/components/entriesLinkOverlay.css
@@ -4,10 +4,30 @@
  * found in the LICENSE file.
  */
 
-:host {
+.connectorContainer {
   display: flex;
   width: 100%;
   height: 100%;
+}
+
+.entry-wrapper {
+  pointer-events: none;
+  position: absolute;
+  display: block;
+  border: 2px solid var(--color-text-primary);
+  box-sizing: border-box;
+
+  &.cut-off-top {
+    border-top: none;
+  }
+
+  &.cut-off-bottom {
+    border-bottom: none;
+  }
+}
+
+.entry-is-not-source {
+  border: 2px dashed var(--color-text-primary);
 }
 
 .create-link-icon {
